# bypass-pet

./: .gitignore  README.md  preview.html  pyproject.toml
codex/: brief.md  prompts.md
docs/superpowers/specs/: 2026-05-17-nailong-pet-design.md  2026-05-18-fight-club-pet-design.md
scripts/: install_desktop_shortcut.ps1
src/bypass_pet/: __main__.py  animator.py  app.py  config.py  pet_window.py  state.py
tests/: test_state.py
