[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bypass-pet"
version = "0.1.0"
description = "Pixel desktop pet for Windows that toggles Claude Code Desktop's bypass mode. Two states from Fight Club: the Narrator (accept) vs Tyler Durden (bypass)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "xing0325" }]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
bypass-pet = "bypass_pet.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/bypass_pet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
